--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
 
         {% block javascripts %}{% endblock %}
